Issue #201 - Adding missing margins to media items.

--- a/components/media/media.scss
+++ b/components/media/media.scss
@@ -7,9 +7,18 @@
   }
 }
 
-.align-left,
+.media {
+  margin-bottom: $spacer;
+}
+
+.align-left {
+  max-width: 50%;
+  margin-right: $spacer;
+}
+
 .align-right {
   max-width: 50%;
+  margin-left: $spacer;
 }
 
 // Remote video adds `ratio` classes to fix the aspect ratio in a responsive
@@ -18,14 +27,17 @@
 .media--type-remote-video {
   &.align-left,
   &.align-right {
-    max-width: none;
-    width: 100%;
+    width: 50%;
+    max-width: 50%;
   }
 
-  @include media-breakpoint-up('md') {
+  @include media-breakpoint-down('md') {
     &.align-left,
     &.align-right {
-      width: 50%;
+      max-width: none;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
